<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/light_grey"
    android:id="@+id/random_list_container"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView_title"
            android:text="@string/default_recipe_name"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/imageView_food"
            android:contentDescription="@string/image_content_description"
            android:scaleType="centerCrop"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:src="@drawable/ic_servings"
                    android:contentDescription="@string/person_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/textView_servings"
                    android:textSize="12sp"
                    android:padding="10dp"
                    android:text="@string/default_person_count"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:src="@drawable/ic_time"
                    android:contentDescription="@string/timer_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/textView_time"
                    android:textSize="12sp"
                    android:padding="10dp"
                    android:text="@string/default_time"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>